--- a/Application/platforms/android/assets/www/index.html
+++ b/Application/platforms/android/assets/www/index.html
@@ -11,7 +11,7 @@
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
-<body>
+<body class="platform-android platform-cordova platform-webview">
 
   <!-- this Ionic's root component and where the app will load -->
   <ion-app></ion-app>
