--- a/Application/platforms/android/assets/www/index.html
+++ b/Application/platforms/android/assets/www/index.html
@@ -13,7 +13,7 @@
     <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
 
-<body style="background-color :#F9FCFD">
+<body style="background-color :#F9FCFD" class="platform-android platform-cordova platform-webview">
 
     <!-- this Ionic's root component and where the app will load -->
     <ion-app></ion-app>
